--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "pokedexVersion1",
-    "slug": "pokedexversion1",
+    "name": "seanmcgovern-pokedex",
+    "slug": "seanmcgovern-pokedex",
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
@@ -25,6 +25,6 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": ""
+    "description": "A Pokedex mobile application, currently including generations 1-5"
   }
 }
