Added firebase anonymous authentication and user initialization, working on login screen and party functionality.

--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.seanmcgovern.pokedex",
       "supportsTablet": true
     },
     "description": "A Pokedex mobile application, currently including generations 1-5"
