--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-constants": "~9.0.0",
     "firebase": "7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
