--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-constants": "~9.0.0",
+    "expo-screen-orientation": "~1.0.0",
     "firebase": "7.9.0",
+    "native-base": "^2.13.14",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
