--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-snap-carousel": "^4.0.0-beta.5",
     "react-native-swipe-list-view": "^3.2.3",
     "react-native-web": "~0.11.7"
   },
