Designed custom logo and pokeball images, added github url and description to app config.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "seanmcgovern-pokedex",
-    "slug": "seanmcgovern-pokedex",
+    "name": "SeanMcGovern-Pokedex",
+    "slug": "pokedex",
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
@@ -26,6 +26,7 @@
       "bundleIdentifier": "com.seanmcgovern.pokedex",
       "supportsTablet": true
     },
-    "description": "A Pokedex mobile application, currently including generations 1-5"
+    "description": "A Pokedex mobile application that can display data on 7 generations of Pokemon. The app also allows users to create parties, or designated groups of Pokemon, and add Pokemon to a list of favorites. Both parties and favorites are stored in Firebase, and displayed on the user profile. It was built with React-Native, Firebase for user authentication and database purposes, and Expo for deployment/development. Additionally, I used PokeAPI for data, with React-Native-Elements and NativeBase for basic components.",
+    "githubUrl": "https://github.com/seanrmcgovern/Pokedex"
   }
 }
