--- a/package.json
+++ b/package.json
@@ -6,37 +6,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~37.0.3",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "~0.61.4",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-screens": "~2.2.0",
-    "react-native-unimodules": "~0.7.0",
-    "react-native-web": "~0.11.7",
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.0",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
-    "expo-constants": "~9.0.0",
-    "expo-screen-orientation": "~1.0.0",
+    "expo": "^40.0.0",
+    "expo-constants": "~9.3.3",
+    "expo-screen-orientation": "~2.1.0",
+    "expo-updates": "^0.4.1",
     "expokit": "^36.0.1",
     "firebase": "7.9.0",
     "native-base": "^2.13.14",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "0.63.4",
     "react-native-elements": "^2.0.2",
-    "react-native-safe-area-context": "0.7.3",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
     "react-native-snap-carousel": "^4.0.0-beta.5",
-    "react-native-swipe-list-view": "^3.2.3"
+    "react-native-swipe-list-view": "^3.2.3",
+    "react-native-unimodules": "~0.12.0",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "~7.9.0",
     "babel-jest": "~24.9.0",
+    "babel-preset-expo": "8.3.0",
     "jest": "~24.9.0",
     "metro-react-native-babel-preset": "~0.56.0",
-    "react-test-renderer": "~16.9.0",
-    "babel-preset-expo": "~8.1.0"
+    "react-test-renderer": "~16.9.0"
   },
   "private": true,
   "name": "Pokedex",
