Added animation to partylist dropdown, and added logo to splash screen

--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "orientation": "portrait",
     "icon": "./assets/logo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -30,7 +30,7 @@
       "package": "com.seanmcgovern.pokedex",
       "versionCode": 1
     },
-    "description": "A Pokedex mobile application that can display data on 7 generations of Pokemon. The app also allows users to create parties, or designated groups of Pokemon, and add Pokemon to a list of favorites. Both parties and favorites are stored in Firebase, and displayed on the user profile. It was built with React-Native, Firebase for user authentication and database purposes, and Expo for deployment/development. Additionally, I used PokeAPI for data, with React-Native-Elements and NativeBase for basic components.",
+    "description": "A Pokedex mobile application that can display data on all 8 generations of Pokemon. The app also allows users to create parties, or designated groups of Pokemon, and add Pokemon to a list of favorites. Both parties and favorites are stored in Firebase, and displayed on the user profile. It was built with React-Native, Firebase for user authentication and database purposes, and Expo for deployment/development. Additionally, I used PokeAPI for data, with React-Native-Elements and NativeBase for basic components.",
     "githubUrl": "https://github.com/seanrmcgovern/Pokedex"
   }
 }
