--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.0",
+    "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
