--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react-native-bottomsheet-reanimated": "0.0.22",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-interactable-reanimated": "0.0.8",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-snap-carousel": "^4.0.0-beta.5",
     "react-native-swipe-list-view": "^3.2.3",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
