Added radar chart component for favorites tab redesign, and added new kalos shiny sprites

--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
-    "expo": "^40.0.0",
+    "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-constants": "~9.3.3",
     "expo-screen-orientation": "~2.1.0",
     "expo-web-browser": "~8.6.0",
     "firebase": "7.9.0",
+    "lodash": "^4.17.21",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -33,6 +34,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-snap-carousel": "^4.0.0-beta.5",
+    "react-native-svg": "12.1.0",
     "react-native-swipe-list-view": "^3.2.3",
     "react-native-web": "~0.13.12",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
