--- a/package.json
+++ b/package.json
@@ -8,40 +8,40 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.7.0",
-    "@react-navigation/drawer": "^5.11.4",
-    "@react-navigation/native": "^5.7.0",
-    "@react-navigation/stack": "^5.7.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.15",
+    "@react-navigation/drawer": "^5.12.9",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
     "axios": "^0.19.2",
-    "expo": "^40.0.1",
-    "expo-app-loading": "^1.0.1",
-    "expo-constants": "~9.3.3",
-    "expo-screen-orientation": "~2.1.0",
-    "expo-web-browser": "~8.6.0",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-constants": "~13.0.0",
+    "expo-screen-orientation": "~4.1.1",
+    "expo-web-browser": "~10.1.0",
     "firebase": "7.9.0",
     "lodash": "^4.17.21",
     "native-base": "^2.13.14",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-bottomsheet-reanimated": "0.0.22",
     "react-native-elements": "^2.0.2",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-interactable-reanimated": "0.0.8",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-snap-carousel": "^4.0.0-beta.5",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-swipe-list-view": "^3.2.3",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "babel-preset-expo": "8.3.0"
+    "@babel/core": "^7.12.9",
+    "babel-preset-expo": "9.0.1"
   },
   "private": true
 }
